Bug in source code source/blender/blenlib/intern/math_color_inline.c #91911

Closed
opened 2021-10-03 13:42:28 +02:00 by Patrik Olsson · 6 comments

System Information
Operating system: n/a
Graphics card: n/a

Blender Version
Broken: blender-2.93
Worked: n/a

Short description of error
This file contain a small bug introduced by Brecht Van Lommel (brecht) on Jul 19 2021, 6:39 PM
https://developer.blender.org/diffusion/B/browse/master/source/blender/blenlib/intern/math_color_inline.c

Exact steps for others to reproduce the error
method "dither_random_value"
line 330:
currently reads: return hash0 + hash0 - 0.5f;
should read: return hash0 + hash1 - 0.5f;

**System Information** Operating system: n/a Graphics card: n/a **Blender Version** Broken: blender-2.93 Worked: n/a **Short description of error** This file contain a small bug introduced by Brecht Van Lommel (brecht) on Jul 19 2021, 6:39 PM https://developer.blender.org/diffusion/B/browse/master/source/blender/blenlib/intern/math_color_inline.c **Exact steps for others to reproduce the error** method "dither_random_value" line 330: currently reads: return hash0 + hash0 - 0.5f; should read: return hash0 + hash1 - 0.5f;
Author

Added subscriber: @po942770

Added subscriber: @po942770
Member

Added subscribers: @brecht, @PratikPB2123

Added subscribers: @brecht, @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Hi @brecht , can you please take a look at it?

Hi @brecht , can you please take a look at it?

This issue was referenced by 8ca7250982

This issue was referenced by 8ca7250982087c137370f72c6b2de91c7ce09e91

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2021-10-04 14:10:00 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#91911
No description provided.