Fix T91911: error in image dithering code after recent changes

Thanks to Patrik Olsson for spotting this.